--- a/package.xml
+++ b/package.xml
@@ -60,7 +60,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>turtlesim</build_depend>
-  <build_export_depend>PlotJuggler</build_export_depend>
+  <!--build_export_depend>PlotJuggler</build_export_depend-->
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>numpy</build_export_depend>
   <build_export_depend>random</build_export_depend>
@@ -71,7 +71,7 @@
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>turtlesim</build_export_depend>
-  <exec_depend>PlotJuggler</exec_depend>
+  <!--exec_depend>PlotJuggler</exec_depend-->
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>numpy</exec_depend>
   <exec_depend>random</exec_depend>
