--- a/package.xml
+++ b/package.xml
@@ -72,6 +72,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>turtlesim</build_export_depend>
   <!--exec_depend>PlotJuggler</exec_depend-->
+  <exec_depend>python3</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>numpy</exec_depend>
   <exec_depend>random</exec_depend>
